--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,13 +2,15 @@
 
   <div class="wrapper">
 
+    <!--[if 0]>
     <h2 class="footer-heading">{{ site.title }}</h2>
+    <![endif]-->
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li>{{ site.description }}</li>
         </ul>
       </div>
 
@@ -29,7 +31,10 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        <ul class="contact-list">
+          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li class="rss-subscribe">Subscribe via <a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></li>
+        </ul>
       </div>
     </div>
 
