--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -111,6 +111,11 @@
 .social-media-list {
     list-style: none;
     margin-left: 0;
+
+    > li {
+        list-style: none;
+        margin-left: 0;
+    }
 }
 
 .footer-col-wrapper {
@@ -180,6 +185,8 @@
     margin-left: 0;
 
     > li {
+        list-style: none;
+        margin-left: 0;
         margin-bottom: $spacing-unit;
     }
 }
